--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .bg-custom-blue {
-        background-color: #003380; /* Navbar background */
+        background-color: whitesmoke;
       }
       /* Animated underline effect */
       .hover-underline {
         position: relative;
         display: inline-block;
+        color: black;
       }
       .hover-underline::after {
         content: "";
@@ -27,6 +28,7 @@
       .hover-underline:hover::after {
         width: 100%;
       }
+      
 
       /* Body styles */
       body {
@@ -607,7 +609,7 @@
           <svg
             class="w-12 h-12"
             fill="none"
-            stroke="currentColor"
+            stroke="black"
             viewBox="0 0 24 24"
           >
             <path
@@ -624,7 +626,7 @@
     <!-- Mobile Menu -->
     <div
       id="mobile-menu"
-      class="hidden md:hidden bg-custom-blue text-white font-bold"
+      class="hidden md:hidden bg-custom-black text-black font-bold"
     >
       <a
         href="index.html"
@@ -848,9 +850,9 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-section">
-          <h3>Text Tiles</h3>
+          <h3>Valve & Pipes</h3>
           <p>
-            Premium quality tiles for all your needs. Transform your space with
+            Premium quality Valve for all your needs. Transform your space with
             our exclusive collection.
           </p>
           <div class="social-icons mt-4">
@@ -877,10 +879,11 @@
         <div class="footer-section">
           <h4>Categories</h4>
           <ul>
-            <li><a href="#">dfdgd dfgfg</a></li>
-            <li><a href="#">Wall Tiles</a></li>
-            <li><a href="#">Outdoor Tiles</a></li>
-            <li><a href="#">Decorative Tiles</a></li>
+            <li><a href="#">"Senso" Industrial Valve </a></li>
+            <li><a href="#">"Vectus" PPRC Pipes & Fittings</a></li>
+            <li><a href="#">"Vectus" Composite Pipes & Fittings</a></li>
+            <li><a href="#">HDPE/PP Pipes & Fittings</a></li>
+            <li><a href="#">All Non-Metallic Pipes & Fittings Fabrication Works</a></li>
           </ul>
         </div>
 
