Update contact.html and add new files

--- a/contact.html
+++ b/contact.html
@@ -630,22 +630,22 @@
     >
       <a
         href="index.html"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Home</a
       >
       <a
         href="About.html"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >About</a
       >
       <a
         href="#"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Product</a
       >
       <a
         href="contact.html"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Contact</a
       >
     </div>
