--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <!-- Right: Menu Links (Desktop) -->
       <div class="hidden md:flex space-x-10 text-xl font-bold">
-        <a href="#" class="hover-underline">Home</a>
+        <a href="" class="hover-underline">Home</a>
         <a href="#" class="hover-underline">About</a>
         <a href="#" class="hover-underline">Product</a>
         <a href="contact.html" class="hover-underline">Contact</a>
@@ -279,23 +279,23 @@
       class="hidden md:hidden bg-custom-black text-black font-bold"
     >
       <a
-        href="#"
+        href="index.html"
         class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Home</a
       >
       <a
         href="#"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >About</a
       >
       <a
         href="#"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Product</a
       >
       <a
         href="contact.html"
-        class="block px-6 py-5 text-xl hover:bg-[#0050b3] transition duration-300"
+        class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Contact</a
       >
     </div>
