Update contact.html and add new files

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       }
 
       .slider-container {
+        margin-top: 2rem;
         position: relative;
         max-width: 100%;
         overflow: hidden;
