Update contact.html and add new files

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
       body {
         font-family: "Arial", sans-serif;
         background: #f9fafb;
+        /* background: #444444; */
         color: #333;
         margin: 0;
         padding: 0;
@@ -651,7 +652,7 @@
     </div>
 
     <!-- Header -->
-    <div class="max-w-7xl mx-auto px-4 py-0">
+    <div class="max-w-7xl mx-auto px-4 py-0 mt-12">
       <h1 class="page-title">Contact</h1>
       <p class="page-subtitle">
         Have questions about our products or need assistance with your order?
