Update contact.html and add new files

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .bg-custom-blue {
-        background-color: whitesmoke;
+        background-color: white;
       }
       /* Animated underline effect */
       .hover-underline {
