--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       .bg-custom-blue {
         /* background-color: #003380; Navbar background */
-        background-color: whitesmoke;
+        background-color: white;
       }
       /* Animated underline effect */
       .hover-underline {
@@ -61,7 +61,7 @@
         min-width: 100%;
         flex: 0 0 100%;
         position: relative;
-        background-color: #777777;
+        background-color: #666666;
         height: 100%;
         overflow: hidden;
         display: flex;
