Update contact.html and add new files

--- a/contact.html
+++ b/contact.html
@@ -590,14 +590,14 @@
       <!-- Left: Logo -->
       <div class="flex items-center space-x-3">
         <img
-          src="logo/Screenshot from 2025-04-28 11-21-37.png"
+          src="logo/logo.jpeg"
           alt="Shlok Enterprise Logo"
           class="h-14 w-auto"
         />
       </div>
 
       <!-- Right: Menu Links (Desktop) -->
-      <div class="hidden md:flex space-x-10 text-xl font-bold">
+      <div class="hidden md:flex space-x-10 text-2xl font-bold">
         <a href="index.html" class="hover-underline">Home</a>
         <a href="About.html" class="hover-underline">About</a>
         <a href="#" class="hover-underline">Product</a>
