Update contact.html and add new files

--- a/contact.html
+++ b/contact.html
@@ -599,8 +599,8 @@
       <!-- Right: Menu Links (Desktop) -->
       <div class="hidden md:flex space-x-10 text-2xl font-bold">
         <a href="index.html" class="hover-underline">Home</a>
-        <a href="About.html" class="hover-underline">About</a>
-        <a href="#" class="hover-underline">Product</a>
+        <a href="#" class="hover-underline">About</a>
+        <a href="product.html" class="hover-underline">Product</a>
         <a href="contact.html" class="hover-underline">Contact</a>
       </div>
 
@@ -635,12 +635,12 @@
         >Home</a
       >
       <a
-        href="About.html"
+        href="#"
         class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >About</a
       >
       <a
-        href="#"
+        href="product.html"
         class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Product</a
       >
