--- a/index.html
+++ b/index.html
@@ -83,9 +83,14 @@
       }
 
       .slide-content .tagline {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         font-weight: 700;
         margin-top: 0.8rem;
+      }
+
+      .slide-content .tagline h1{
+        font-size: 2.3rem;
+        
       }
 
       .slide-image {
@@ -548,7 +553,7 @@
       <div class="hidden md:flex space-x-10 text-2xl font-bold">
         <a href="" class="hover-underline">Home</a>
         <a href="#" class="hover-underline">About</a>
-        <a href="#" class="hover-underline">Product</a>
+        <a href="product.html" class="hover-underline">Product</a>
         <a href="contact.html" class="hover-underline">Contact</a>
       </div>
 
@@ -583,7 +588,7 @@
         >About</a
       >
       <a
-        href="#"
+        href="product.html"
         class="block px-6 py-5 text-xl hover:bg-[#555555] transition duration-300"
         >Product</a
       >
@@ -599,12 +604,8 @@
         <div class="slide">
           <div class="slide-content">
             <div class="feature-list">
-              Right Design<br />
-              Correct Mechanism<br />
-              Perfect Workmanship<br />
-              Accurate Testing
             </div>
-            <div class="tagline">Makes OSKO Valves best in it's class.</div>
+            <div class="tagline"><h1>Welcome To Shlok Enterprises</h1>We Are One Of The Best Stociest & Service Provider From 2007 For Industries.</div>
           </div>
           <div class="slide-image">
             <img src="logo/logo1.png" alt="OSKO Industrial Valve" />
